gate/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gate
  namespace: airport-system
  labels:
    app: gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gate
  template:
    metadata:
      labels:
        app: gate
    spec:
      containers:
        - name: gate
          image: ghcr.io/joranbergfeld/airport-system-gate/gate:latest
          ports:
            - containerPort: 9001
              protocol: TCP
          resources: { }
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
