gate/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gate
    application-system: airport-system
  name: gate
  namespace: airport-system
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: gate
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
